// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test des composants conteneur de documents texte > Test de composant ConteneurDocument > Le conteneur affiche correctement un document 1`] = `
<div
  class="relative h-full w-full overflow-y-auto overflow-x-hidden bg-gris-clair"
>
  <div
    class="absolute w-[calc(100%-80px)] pb-24 transition-all duration-100"
    style="top: 40px; left: 40px;"
  >
    <div>
      Je suis un document
    </div>
  </div>
</div>
`;

exports[`Test des composants conteneur de documents texte > Test de composant ConteneurDocument > Le conteneur affiche correctement un document imprimable 1`] = `
<div
  class="relative h-full w-full overflow-y-auto overflow-x-hidden bg-gris-clair"
>
  <div
    class="sticky top-0 text-end"
  >
    <button
      class="min-w-0 bg-transparent px-1.5 py-0.5 text-bleu-sombre transition-colors hover:text-bleu focus-visible:text-bleu"
      title="Imprimer"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
        data-testid="PrintIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 8H5c-1.66 0-3 1.34-3 3v6h4v4h12v-4h4v-6c0-1.66-1.34-3-3-3m-3 11H8v-5h8zm3-7c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1m-1-9H6v4h12z"
        />
      </svg>
    </button>
  </div>
  <div
    class="absolute w-[calc(100%-80px)] pb-24 transition-all duration-100"
    style="top: 40px; left: 40px;"
  >
    <div>
      Je suis un document
    </div>
  </div>
</div>
`;

exports[`Test des composants conteneur de documents texte > Test du composant DocumentTexte > Le composant s'affiche correctement 1`] = `
<div
  class="mx-auto flex w-full max-w-[750px] bg-blanc font-liberation shadow-lg"
>
  <div
    class="contenu-document-texte flex aspect-[21/29.7] w-full overflow-hidden break-words"
  >
    <div>
      Je suis un document
    </div>
  </div>
</div>
`;
